# memory-tools

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  mem  pyproject.toml
commands/: mem-audit.md  mem-canon.md  mem-index.md  mem-init.md  mem-log.md  mem-note.md  mem-suggest.md  mem.md
demos/: run-polyreg.sh
demos/eval/: build_graph.py  retrieval_tasks.json  run_holistic.py  run_retrieval.py
demos/eval/experiments/: PLAN.md  README.md
demos/eval/hardcase/: run_hardcase.py  scenario.py
demos/eval/lab/: FINDINGS.md  QUESTIONS.md  b10_huge_corpus.py  b11_xsession_keep.py  b2_oracle.py  b3_bio_corpus.py  b4_logs.py  b5_contradictions.py  b6_buried.py  b7_xsession_arch.py  b8_semantic_qa.py  b9_large_corpus.py  runner.py
demos/eval/results/: hardcase-result.json  holistic-haiku-low.json  retrieval-haiku-low.json
demos/polyreg/: CLAUDE.md  README.md  data.py
docs/: CLAUDE.md.template  INSTALL.md
example/: CLAUDE.md
example/project_notes/: README.md  journal.md  knowledge.md
example/project_notes/canon/: index.md  north-star.md
profiles/paper/commands/: logexp.md  mem-audit.md  mem-canon.md  mem-index.md  mem-init.md  mem-log.md  mem-note.md  mem-suggest.md  mem.md  note.md  paper-audit.md  paper-index.md  paper-init.md  papernote.md  technote.md  whattonote.md
profiles/paper/example/: CLAUDE.md
src/memory_graph/: __init__.py  claude_md.py  cli.py  server.py
src/memory_graph/embed/: __init__.py  base.py  fake.py  local.py
src/memory_graph/orchestration/: __init__.py  compact.py  operator.py  remember.py  retrieve.py  runner.py
src/memory_graph/primitives/: __init__.py  store.py
src/memory_graph/prompts/: compact.md  remember.md  retrieve.md  system.md
src/memory_graph/storage/: __init__.py  db.py  files.py  ids.py  note.py  schema.sql
src/memory_graph/templates/: __init__.py  claude_protocol.md
src/memory_graph/viz/: __init__.py  server.py
src/memory_recall/: __init__.py  cli.py  server.py  store.py  subagent.py
src/memory_recall/embed/: __init__.py  embedder.py
src/memory_recall/prompts/: capture.md  search.md
src/memory_recall/storage/: __init__.py  db.py  files.py  ids.py  note.py  schema.sql
src/memory_recall/templates/: claude_md_section.md
src/memory_recall/viz/: __init__.py  (+1 more)
tests/: conftest.py  test_claude_md.py  test_cli.py  test_db.py  test_embed.py  test_files.py  test_ids.py  test_orchestration.py  test_server.py  test_smoke.py  test_store.py  test_subagent.py  test_viz.py
(+48 files in other folders)
