[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-graph-mcp"
version = "0.0.1"
description = "Per-project graph memory for Claude Code, exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "memory-graph-mcp contributors" }]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "fastembed>=0.3.0",
    "mcp>=1.0.0",
    # remember / retrieve / compact spawn sub-agents through this SDK.
    # Required, not optional: the headline tools won't work without it.
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
memory-graph = "memory_graph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"memory_graph" = [
    "storage/schema.sql",
    "prompts/*.md",
    "viz/static/*.html",
    "templates/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
