[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-recall"
version = "0.1.0"
description = "Per-project multi-vector memory recall, exposed as an MCP server with a visualization UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "memory-recall contributors" }]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "fastembed>=0.3.0",
    "mcp>=1.0.0",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
memory-recall = "memory_recall.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"memory_recall" = [
    "storage/schema.sql",
    "prompts/*.md",
    "viz/static/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
